Add result measurement overlay view
